Views Calendar 5.x
==================

Version 5.2 dev
===============

- #338237 Replace 'local_offset_field' with 'offset_field' in date handler.
- Get rid of hard-coded 'UTC' for database values in favor of consistently using date_get_timezone_db().
- Set calendar item font size at a higher level to make sure all sub-elements pick it up and make it easier to override in the theme.
- #336567 Add extra test for valid values to date processing to avoid fatal error on empty property.
- #337209 Add configuration option for new function to truncate long text in calendar cells.

Version 5.2.4
===============

- Set day-splitting timezone to be sure it will split days using the time displayed in the calendar.
- Adapt processing to make sure only selected dates display in nodes, views, and calendars.
- Add option to maximum items per day to either show maximum plus 'more' link or hide all and link to day.
- #324061, #324701 Revert the calendar_colorpicker.js back to the D5 version, it got switched to the D6 version accidentally.
- Adjust the recent changes to the navigation header to be sure only the calendar header and not the date browser is affected.
- #292164 Keep calendar date selector description from floating out of block in IE.
- #298929 Fix code so that calendar legend doesn't display empty div when empty.
- Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.
- Rework html of Year view so month titles will match block view month title for easier css themeing.
- #323265 Add year as well as month to calendar titles.
- #319344 Add 'empty' class and updated css styles provided by MothersClick.com.
- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add min/max year setting to Date argument and set Page Not Found outside that range.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.