@@ -86,7 +86,11 @@
   padding:0;
   margin:0;
 }
-
+/* Make sure paragraphs buried in calendar cells use padding, not margins, for separation so the background color doesn't come through. */
+.calendar-calendar .inner p {
+  padding:0 0 .8em 0;
+  margin:0;
+}
 .calendar-calendar td a {
   font-weight: bold;
   text-decoration: none;
